--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.card{
+/* .card{
   padding: 50px;
   background-color: aqua;
   height: fit-content;
@@ -7,7 +7,6 @@
 
 .container{
   height: 100vh;
-  /* width: 100vw; */
   display: flex;
   justify-content: center;
-}
+} */
